# vulkan-engine

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  Setup.py  setup.bat
assets/: model.glb
cmake/: ShaderCompilation.cmake
cmake/toolchains/: clang.cmake  gcc.cmake  llvm.cmake  mingw.cmake  msvc.cmake  vs22.cmake
include/: application.hpp  command_buffer.hpp  config.hpp  debug_messenger.hpp  device.hpp  logical_device.hpp  physical_device.hpp  pipeline.hpp  queue_family_indices.hpp  shader.hpp  swapchain.hpp  vulkan_instance.hpp  window.hpp
scripts/: ProjectManager.py  RunClangTidy.py  project_manager.py  run_clang_tidy.py
source/: Application.cpp  Application.hpp  CMakeLists.txt  CommandBuffer.cpp  CommandBuffer.hpp  Config.hpp  DebugMessenger.cpp  DebugMessenger.hpp  LogicalDevice.cpp  LogicalDevice.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  Shader.cpp  Shader.hpp  Swapchain.cpp  Swapchain.hpp  TODO.md  VulkanInstance.cpp  VulkanInstance.hpp  Window.cpp  Window.hpp  application.cpp  application.hpp  command_buffer.cpp  command_buffer.hpp  config.hpp  debug_messenger.cpp  debug_messenger.hpp  device.cpp  logical_device.cpp  logical_device.hpp  main.cpp  physical_device.cpp  physical_device.hpp  pipeline.cpp  pipeline.hpp  (+12 more)
source/core/: Buffer.cpp  Buffer.hpp  Camera.cpp  Camera.hpp  CommandBuffer.cpp  CommandBuffer.hpp  CommandPool.cpp  CommandPool.hpp  Config.hpp  Constants.hpp  DebugMessenger.cpp  DebugMessenger.hpp  Engine.cpp  Engine.hpp  Frame.cpp  Frame.hpp  Framebuffer.cpp  Framebuffer.hpp  Image.cpp  Image.hpp  Loader.cpp  Loader.hpp  LogicalDevice.cpp  LogicalDevice.hpp  Material.cpp  Material.hpp  MemoryAllocator.cpp  MemoryAllocator.hpp  Mesh.hpp  Node.cpp  Node.hpp  PhysicalDevice.cpp  PhysicalDevice.hpp  Pipeline.cpp  Pipeline.hpp  QueueFamilyIDs.cpp  QueueFamilyIDs.hpp  QueueFamilyIndices.cpp  QueueFamilyIndices.hpp  RenderObject.hpp  (+19 more)
source/core/command/: BaseCommandBuffer.cpp  BaseCommandBuffer.hpp  CommandPool.hpp  GraphicsCommandBuffer.cpp  GraphicsCommandBuffer.hpp  TransferCommandBuffer.cpp  TransferCommandBuffer.hpp
source/core/descriptor/: DescriptorAllocator.cpp  DescriptorAllocator.hpp  DescriptorPool.cpp  DescriptorPool.hpp  DescriptorSetLayout.cpp  DescriptorSetLayout.hpp  DescriptorWriter.cpp  DescriptorWriter.hpp
source/shaders/: Convultion.frag  HDR.frag  HDR.vert  Mesh.frag  Mesh.vert  Simple.frag  Simple.vert  Skybox.frag  Skybox.vert  Structures.glsl  simple.frag  simple.vert
source/utils/: Common.hpp  NonCopyable.hpp  NonMovable.hpp
